fix issues with dark mode and login page

--- a/frontend/stylesheets/dark.less
+++ b/frontend/stylesheets/dark.less
@@ -69,3 +69,9 @@ a:hover {
     fill: rgba(50, 50, 50, 0.7);
   }
 }
+
+.login-view {
+  .ant-input-affix-wrapper-status-error {
+    background-color: @black !important;
+  }
+}
